<resources>
    <string name="app_name">30 Days</string>
    <string name="action_settings">Settings</string>
    <string name="auth_Title">Welcome to 30 Days</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="not_a_user">Not a user?</string>
    <string name="conf_Title">Verification</string>
    <string name="conf_Desc">Check your email for the verification code and enter it below.</string>
    <string name="code_hint">Code</string>
    <string name="submit">Submit</string>
    <string name="already_a_user">Already a user?</string>
    <string name="conf_Pass_hint">Confirm Password</string>
    <string name="create_Acct">Create Account</string>
    <string name="quick_sign_in">Quick sign in?</string>
    <string name="remember">Remember me?</string>
    <string name="first_time">First time?</string>
    <string name="localPin" />
    <string name="agreement_p1">Thank you for agreeing to participate in 30 Days. Please grant access to device data and usage below.</string>
    <string name="agreement_p2">Your privacy matters to us, so your personal information will be anonymized and protected using advanced encryption.</string>
    <string name="moreInfo_p1">The following types of data will be collected to help us get a better understanding of teens’ social media usage:</string>
    <string name="moreInfo_p2">• Which apps are installed\n• Time spent using the device\n• Time spent using each app</string>
    <string name="dealAnswer">The deal has to do with: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed adipiscing diam donec adipiscing tristique risus nec. In pellentesque massa placerat duis ultricies lacus. Sit amet massa vitae tortor condimentum lacinia. Nisl vel pretium lectus quam id. Fermentum dui faucibus in ornare quam viverra. Mattis rhoncus urna neque viverra justo nec ultrices dui sapien. Varius sit amet mattis vulputate. Non sodales neque sodales ut etiam sit amet nisl. Et malesuada fames ac turpis egestas sed tempus urna et. Quisque egestas diam in arcu cursus euismod quis. Dignissim diam quis enim lobortis scelerisque.\n</string>
    <string name="interaction">Describe the online interaction in the screenshot you selected</string>
    <string name="earned">You earn $1.50 for each journal entry submitted.\n\nAdditionally, the study is broken up into 6 periods of 5 days each, and if you submit a journal entry for each of the 5 days within a period, you will receive a $10 bonus.\n\nFor example, if you submit the first 5 journal entries in a row, you will receive a $10 bonus after the 5th entry. Or, if you submit the 6th through the 10th journal entries, you will receive a $10 bonus after the 10th entry.\n\nSince there are 6 of these periods, you can earn up to $60 in bonuses. This means you can earn up to $105 from submitting journal entries.</string>
    <string name="screenshot_prompt">To help us learn more about online social behaviors and risks, please upload screenshots from your own online experiences.\n\nWe only receive the photos that you choose to upload. Photos are secured and encrypted, and will be anonymized in our research.</string>
    <string name="prog_bar_paragraph">The Progress Bar is split into five colored segments, representing a five-day period. Each segment indicates the journal entry for that day:</string>
    <string name="main_info_journal_paragraph">You will receive $1.50 for each journal entry accepted by the researcher</string>
    <string name="main_info_bonus_paragraph">If all five journal entries in a five-day period are accepted, you will receive a $5 bonus. Similarly, if you submit a screenshot within this five-day period and it is accepted, you will receive an additional $5 bonus.</string>
    <string name="select_30_days">Select <b>30 Days</b> </string>
    <string name="tap_ok_below">Tap <b>OK</b> below</string>
    <string name="press_allow_on_the_dialog">Press <b>Allow</b> on the dialog</string>
    <string name="press_next_below">Press <b>Next</b> below</string>
    <string name="permit_usage_access">Tap <b>Permit Usage Access</b> for 30 Days</string>
    <string name="pass_para">Your password must contain 8 characters and at least one number</string>
    <string name="moreInfo_p3">We do not automatically collect your social media data or other personal data (other than listed above), or what you do in each app.</string>
    <string name="return_to_this_screen">Return to this screen</string>
    <string name="default_message">No message available.</string>
    <string name="unapproved_message_addendum">Check back after the researcher has approved or rejected the screenshot.</string>
    <string name="missed_message_addendum">This journal entry was not submitted.</string>
</resources>
