<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/signInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="627dp"
        android:layout_marginEnd="124dp"
        android:text="@string/sign_in"
        android:textColor="@color/primaryAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="16dp"
        android:text="@string/already_a_user"
        android:textColor="@color/LightningWhite"
        app:layout_constraintEnd_toStartOf="@+id/signInLink"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterAcct" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="160dp"
        android:textColor="@color/LightningWhite"
        android:textColorHint="@color/primaryAccent"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPassword1"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="none|textPassword"
        android:textColor="@color/LightningWhite"
        android:textColorHint="@color/primaryAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEmail" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/conf_Pass_hint"
        android:inputType="none|textPassword"
        android:textColor="@color/LightningWhite"
        android:textColorHint="@color/primaryAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword1" />


    <Button
        android:id="@+id/RegisterAcct"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/create_Acct"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword2" />

    <TextView
        android:id="@+id/regTitle"
        android:layout_width="260dp"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:text="Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/LightningWhite"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>