<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBackground"
    android:orientation="vertical"
    tools:context=".Activities.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/auth_title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="84dp"
            android:text="@string/auth_Title"
            android:textColor="@color/prominent"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:text="Please sign in with your email address and password"
            android:textColor="@color/apparent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/prominent"
            android:textColorHint="@color/normal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/prominent"
            android:textColorHint="@color/normal" />

        <de.mustafagercek.library.LoadingButton
            android:id="@+id/button_sign_in"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:elevation="5dp"
            android:padding="0dp"
            app:buttonColor="@color/primaryDark"
            app:buttonText="Sign in"
            app:textColor="@color/themeBackground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/forgot_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Forgot your password?"
                android:textColor="@color/apparent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="Reset It"
                android:textColor="@color/secondary"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>